--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -356,14 +356,14 @@
 							<div class="row">
 
 								<div class="col-sm-4">
-									<div class="item">
+									<a href="https://gym-tau-six.vercel.app/"><div class="item">
 										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												COMING SOON
 											</a>
 										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
+									</div></a><!-- /.item -->
 								</div><!-- /.col -->
 							</div><!-- /.row -->
 						</div><!--/.isotope-->
