--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -360,7 +360,7 @@
 										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												COMING SOON
+												<a href="https://gym-tau-six.vercel.app/">GYM SITE</a>
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div></a><!-- /.item -->
