--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -357,13 +357,23 @@
 
 								<div class="col-sm-4">
 									<a href="https://gym-tau-six.vercel.app/"><div class="item">
-										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image"/>
+										<img src="https://www.pexels.com/photo/man-holding-barbell-1431282/" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												<a href="https://gym-tau-six.vercel.app/">GYM SITE</a>
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div></a><!-- /.item -->
+								</div><!-- /.col -->
+								<div class="col-sm-4">
+									<div class="item">
+										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="#">
+												<a href="https://logistics-three-mocha.vercel.app/">Logistics Page</a>
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
 								</div><!-- /.col -->
 							</div><!-- /.row -->
 						</div><!--/.isotope-->
