--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -367,7 +367,7 @@
 								</div><!-- /.col -->
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image"/>
+										<img src="https://images.pexels.com/photos/70347/cargo-jet-c-17-airdrop-humvee-70347.jpeg?auto=compress&cs=tinysrgb&w=600" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												<a href="https://logistics-three-mocha.vercel.app/">Logistics Page</a>
