--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -357,7 +357,7 @@
 
 								<div class="col-sm-4">
 									<a href="https://gym-tau-six.vercel.app/"><div class="item">
-										<img src="https://www.pexels.com/photo/man-holding-barbell-1431282/" alt="portfolio image"/>
+										<img src="https://images.pexels.com/photos/38630/bodybuilder-weight-training-stress-38630.jpeg?auto=compress&cs=tinysrgb&w=600" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												<a href="https://gym-tau-six.vercel.app/">GYM SITE</a>
